--- a/ao_hr/views/employee_appointment_sheet_view.xml
+++ b/ao_hr/views/employee_appointment_sheet_view.xml
@@ -11,18 +11,19 @@
                         <div class="oe_title">
                             <label for="name"/>
                             <h1>
-                                <field name="name" required="1" placeholder="Appointment name"/>
-                            </h1>
-                            <label for="employee_id"/>
-                            <h1>
-                                <field name="employee_id" required="1" placeholder="Employee name"/>
+                                <field name="name" required="1" placeholder="Nome"/>
                             </h1>
                         </div>
-                        <group col="4">
-                            <field name="department_id"/>
-                            <field name="job_id"/>
-                            <field name="appointed_by"/>
-                            <field name="department_manger_id"/>
+                        <group>
+                            <group>
+                                <field name="employee_id" required="1" widget="many2one_avatar_employee"/>
+                                <field name="appointed_by"/>
+                            </group>
+                            <group>
+                                <field name="department_id"/>
+                                <field name="job_id"/>
+                                <field name="department_manger_id"/>
+                            </group>
                         </group>
 
                         <notebook>
@@ -70,11 +71,11 @@
             <field name="name">ao.hr.employee.appointment.tree</field>
             <field name="model">ao.hr.employee.appointment</field>
             <field name="arch" type="xml">
-                <tree string="Employee Promotion">
+                <list string="Employee Promotion">
                     <field name="name"/>
                     <field name="employee_id"/>
                     <field name="department_manger_id"/>
-                </tree>
+                </list>
             </field>
         </record>
 
@@ -97,7 +98,7 @@
             <field name="name">Ficha de Nomeação do Funcionário do ano</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">ao.hr.employee.appointment</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     Não há nomeação de ano de funcionário clique aqui para adicionar nova nomeação de ano.
