--- a/ao_hr/views/employee_task_view.xml
+++ b/ao_hr/views/employee_task_view.xml
@@ -13,21 +13,21 @@
                     <div class="oe_title">
                         <h1 class="o_row">
                             <field name="name" placeholder="Task Title..." required="1"
-                                   attrs="{'readonly': [('state', 'in', ['done', 'canceled'])]}"/>
+                                   readonly = "state in ['done', 'canceled']"/>
                         </h1>
                     </div>
                     <group col="4">
                         <field name="start_date" required="1"
-                               attrs="{'readonly': [('state', 'in', ['done', 'canceled'])]}"/>
-                        <field name="end_date" attrs="{'readonly': [('state', 'in', ['done', 'canceled'])]}"/>
-                        <field name="owner" required="1" attrs="{'readonly': [('state', 'in', ['done', 'canceled'])]}"
+                               readonly = "state in ['done', 'canceled']"/>
+                        <field name="end_date" readonly = "state in ['done', 'canceled']"/>
+                        <field name="owner" required="1" readonly = "state in ['done', 'canceled']"
                                string="Proprietário da Tarefa"/>
                         <field name="total_time" readonly="1"/>
                     </group>
                     <notebook>
                         <page name="description_page" string="Description">
                             <field name="description" type="html"
-                                   attrs="{'readonly': [('state', 'in', ['done', 'canceled'])]}"/>
+                                   readonly = "state in ['done', 'canceled']"/>
                             <div class="oe_clear"/>
                         </page>
                     </notebook>
@@ -45,14 +45,14 @@
         <field name="name">hr.employee.task.tree</field>
         <field name="model">hr.employee.task</field>
         <field name="arch" type="xml">
-            <tree string="hr_employee_task_tree">
+            <list string="hr_employee_task_tree">
                 <field name="name"/>
                 <field name="owner"/>
                 <field name="state"/>
                 <field name="start_date"/>
                 <field name="end_date"/>
                 <field name="total_time"/>
-            </tree>
+            </list>
         </field>
     </record>
 
