--- a/ao_hr/views/employee_view.xml
+++ b/ao_hr/views/employee_view.xml
@@ -12,9 +12,6 @@
             <field name="parent_id" position="after" widget="badge">
                 <field name="age"/>
             </field>
-            <!--<field name="phone" position="after">
-                 <field name="qualification"/>
-            </field>-->
         </field>
     </record>
 
@@ -56,8 +53,8 @@
             <field name="birthday" position="replace">
                 <field name="birthday" required="1"/>
             </field>
-             <field name="birthday" position="before">
-                <field name="bi_emission"  attrs="{'invisible': [('is_foreign', '=', True)]}"/>
+            <field name="birthday" position="before">
+                <field name="bi_emission" invisible="is_foreign==True"/>
             </field>
             <field name="department_id" position="before">
                 <field name="admission_date" required="0"/>
@@ -65,12 +62,9 @@
             </field>
             <field name="country_id" position="after">
                 <field name="is_foreign" widget="boolean_toggle"/>
-                <field name="location_province" attrs="{'invisible': [('is_foreign', '=', True)]}" domain="[('country_id','=',country_id)]"
+                <field name="location_province" invisible="is_foreign==True" domain="[('country_id','=',country_id)]"
                        options="{'no_quick_create': True, 'no_create_edit' : True}"/>
-                <!--                <field name="County_address" attrs="{'invisible':[('location_province','=', False)]}"-->
-                <!--                        domain="[('state_id','=',location_province)]"  options="{'no_quick_create': True, 'no_create_edit' : True}"/>-->
-                <!--
-                 -->
+               
 
             </field>
             <field name="passport_id" position="after">
@@ -83,37 +77,20 @@
             </field>
 
 
-            <!-- <field name="address_home_id" position="replace">
-                 <field name="address_address"/>
-                 <field name="personal_mobile_1"/>
-                 <field name="personal_mobile_2"/>
-                 <field name="personal_home_landline"/>
-                 <field name="personal_email"/>
-             </field>-->
+           
             <xpath expr="//page[@name='personal_information']/group/group" position="after">
                 <group string="Filiação" cols="2" name="parent_group">
                     <field name="father" string="Pai"/>
                     <field name="mother" string="Mãe"/>
                 </group>
             </xpath>
-            <!--<xpath expr="//page[@name='hr_settings']/group/group" position="after">
-                <field name="payment_method" groups="hr_payroll.group_hr_payroll_user"
-                           required="1"/>
-            </xpath>
-            <xpath expr="//notebook/page[3]" position="inside">
-                <group string="Activos da Empresa em uso" name="assets_group">
-                    <field name="company_assets" groups="hr_payroll.group_hr_payroll_user"
-                           widget="many2many_checkboxes"/>
-                </group>
-            </xpath>-->
+           
             <xpath expr="//page[@name='personal_information']/group/group[4]" position="before">
                 <group string="Dados da conta bancária">
-                    <field name="bank_bank" attrs="{'required':[('payment_method','=','bank')]}" string="Banco"
+                    <field name="bank_bank" required="payment_method=='bank'" string="Banco"
                            options="{'no_quick_create': True, 'no_create_edit' : True}"/>
                     <field name="bank_account" string="conta bancária"/>
-                    <field name="bank_iban" string="IBAN"  attrs="{ 'invisible': [('is_foreign', '=', True)],'required': [('payment_method', '=', 'bank')]}"/>
-<!--
-                    <field name="bank_iban" attrs="{'invisible': [('is_foreign', '=', True)]} " string="IBAN"/>
+                    <field name="bank_iban" string="IBAN" invisible="is_foreign==True" required = "payment_method=='bank'" />
 -->
                     <field name="payment_method" groups="hr_payroll.group_hr_payroll_user" string="Metodo de pagamento"
                            widget="radio"
@@ -138,41 +115,18 @@
                 </group>
 
             </xpath>
-            <!--          <xpath expr="//notebook/page[2]/group/group[2]" position="after">-->
-            <!--                 <group string="Emergences Contacts">-->
-            <!--                     <field name="emergence_contact"/>-->
-            <!--                 </group>-->
-            <!--             </xpath>-->
-
-            <!-- <xpath expr="//notebook/page[@name='hr_settings']" position="after">
-                 <page name="hr_task" string="Tasks">
-                     <field name="task_id">
-                         <tree editable="top" create="0" delete="0">
-                             <field name="name" readonly="1"/>
-                             <field name="start_date" readonly="1"/>
-                             <field name="end_date" readonly="1"/>
-                             <field name="total_time" readonly="1" widget="time"/>
-                             <field name="state" readonly="1"/>
-                             <button name="start_task" type="object" title="Start" icon="fa-play"
-                                     attrs="{'invisible':[('state','in', ['in_progress','done', 'canceled'] )]}"/>
-                             <button name="cancel_task" type="object" title="Cancel" icon="fa-close"
-                                     attrs="{'invisible':[('state','not in', ['in_progress'] )]}"/>
-                             <button name="done_task" type="object" title="Done" icon="fa-check"
-                                     attrs="{'invisible':[('state','not in', ['in_progress'] )]}"/>
-
-                         </tree>
-                     </field>
-                 </page>
-             </xpath>-->
+            
             <xpath expr="//page[@name='hr_settings']" position="before">
-                <page string="Descrições das Funções">
-                    <field name="functions_descriptions"/>
-                </page>
-                <page string="Assinaturas digitais" name="signature">
-                    <field name="sign_signature" widget="signature"
-                           options="{'full_name': 'display_name', 'size': ['',200]}"/>
-                </page>
-            </xpath>
+                    <page name="description" string="Descrições das Funções">
+                        <h3 style="text-align:left">Descrições das Funções</h3>
+                        <field name="functions_descriptions" nolabel="1"/>
+
+                    </page>
+                    <page string="Assinaturas digitais" name="signature">
+                        <field name="sign_signature" widget="signature"
+                               options="{'full_name': 'display_name', 'size': ['',100]}"/>
+                    </page>
+                </xpath>
         </field>
     </record>
 </odoo>
