--- a/ao_hr/views/parent_view.xml
+++ b/ao_hr/views/parent_view.xml
@@ -55,7 +55,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">hr.father</field>
             <!--<field name="view_type">form</field>-->
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <record id="vew_hr_mother_form" model="ir.ui.view">
@@ -112,7 +112,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">hr.mother</field>
             <!--<field name="view_type">form</field>-->
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
     </data>
