--- a/ao_hr/views/remuneration_view.xml
+++ b/ao_hr/views/remuneration_view.xml
@@ -5,7 +5,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">hr.remuneration.code</field>
        <!-- <field name="view_type">form</field>-->
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="target">current</field>
     </record>
 
@@ -16,13 +16,38 @@
         <field name="name">hr.remuneration.code.form</field>
         <field name="model">hr.remuneration.code</field>
         <field name="arch" type="xml">
-            <tree string="Remuneration Codes" decoration-danger="type == 'deduction'"
+            <list string="Remuneration Codes" decoration-danger="type == 'deduction'"
                   decoration-success="type == 'remuneration'" editable="top">
                 <field name="code"/>
                 <field name="name"/>
                 <field name="type"/>
                 <field name="company_id" groups="base.group_multi_company"/>
-            </tree>
+        </list>
+        </field>
+    </record>
+     <record id="ao_remuneration_code_view_form" model="ir.ui.view">
+        <field name="name">hr.remuneration.code.view.form</field>
+        <field name="model">hr.remuneration.code</field>
+        <field name="arch" type="xml">
+            <form string="_form">
+                <sheet>
+                    <div class="oe_title">
+                        <field name="name"/>
+                    </div>
+
+                    <group>
+                        <group>
+                            <field name="code"/>
+
+                        </group>
+                        <group>
+                            <field name="type"/>
+                            <field name="company_id" groups="base.group_multi_company"/>
+                        </group>
+
+                    </group>
+                </sheet>
+            </form>
         </field>
     </record>
 </odoo>
