--- a/ao_hr/views/employee_view.xml
+++ b/ao_hr/views/employee_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- modify employee tree view -->
+    <!-- TREE permanece igual -->
     <record id="ao_employee_tree_view" model="ir.ui.view">
         <field name="name">Ahr.employee.tree</field>
         <field name="model">hr.employee</field>
@@ -15,20 +15,21 @@
         </field>
     </record>
 
-
-    <!-- modify employee form view -->
+    <!-- FORM -->
     <record id="ao_employee_form_view" model="ir.ui.view">
-        <field name="name">hr.employee.form</field>
+        <field name="name">ao.hr.employee.form</field>
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form"/>
         <field name="priority">1024</field>
         <field name="arch" type="xml">
 
-            <!-- <field name="address_id" position="replace"/>-->
-            <field name="bank_account_id" position="replace"/>
+            <!-- ⚠️ Removido: isto pode não existir na vista base -->
+            <!-- <field name="bank_account_id" position="replace"/> -->
+
             <xpath expr="//field[@name='work_email']" position="after">
                 <field name="is_governing_body" widget="boolean_toggle"/>
             </xpath>
+
             <xpath expr="//div[hasclass('oe_title')]/h1" position="before">
                 <field name="employee_type" widget="radio" class="oe_edit_only" options="{'horizontal': true}" invisible="1"/>
             </xpath>
@@ -42,59 +43,70 @@
                     <field name="job_id" placeholder="Job position"/>
                 </h2>
             </xpath>
+
+            <!-- ❌ Removido: âncora inexistente
             <xpath expr="//field[@name='contract_id']" position="after">
-                <field name="structure_type_id" invisible="0"
-                       options="{'no_create': True, 'no_open': True}"/>
+                <field name="structure_type_id" invisible="0" options="{'no_create': True, 'no_open': True}"/>
+            </xpath>
+            -->
+
+            <!-- Substitui o grupo e já inclui o campo aqui -->
+            <xpath expr="//page[@name='hr_settings']/group/group" position="replace">
+                <group string="Status" name="active_group">
+                    <field name="user_id" string="Related User" domain="[('share', '=', False)]"/>
+                    <field name="cp_employee_type" invisible="1"/>
+                    <field name="structure_type_id" options="{'no_create': True, 'no_open': True}"/>
+                </group>
             </xpath>
 
-            <!-- <field name="work_location" position="replace">
-                 <field name="establishment"/>
-             </field>-->
+            <!-- Datas e BI -->
             <field name="birthday" position="replace">
                 <field name="birthday" required="1"/>
             </field>
             <field name="birthday" position="before">
-                <field name="bi_emission" invisible="is_foreign==True"/>
+                <!-- usa a sintaxe moderna invisível (boolean) -->
+                <field name="bi_emission" invisible="is_foreign"/>
             </field>
+
+            <!-- Admissão / Saída -->
             <field name="department_id" position="before">
                 <field name="admission_date" required="0"/>
                 <field name="last_work_date" required="0"/>
             </field>
+
+            <!-- Nacionalidade + flags -->
             <field name="country_id" position="after">
                 <field name="is_foreign" widget="boolean_toggle"/>
-                <field name="location_province" invisible="is_foreign==True" domain="[('country_id','=',country_id)]"
+                <field name="location_province" invisible="is_foreign" domain="[('country_id','=',country_id)]"
                        options="{'no_quick_create': True, 'no_create_edit' : True}"/>
-               
-
             </field>
+
+            <!-- Fiscais -->
             <field name="passport_id" position="after">
                 <field name="fiscal_number"/>
                 <field name="social_security"/>
             </field>
 
-             <field name="identification_id" position="replace">
+            <field name="identification_id" position="replace">
                 <field name="identification_id"/>
             </field>
 
-
-           
+            <!-- Filiação -->
             <xpath expr="//page[@name='personal_information']/group/group" position="after">
                 <group string="Filiação" cols="2" name="parent_group">
                     <field name="father" string="Pai"/>
                     <field name="mother" string="Mãe"/>
                 </group>
             </xpath>
-           
+
+            <!-- Bancos + toggles -->
             <xpath expr="//page[@name='personal_information']/group/group[4]" position="before">
                 <group string="Dados da conta bancária">
                     <field name="bank_bank" required="payment_method=='bank'" string="Banco"
                            options="{'no_quick_create': True, 'no_create_edit' : True}"/>
                     <field name="bank_account" string="conta bancária"/>
-                    <field name="bank_iban" string="IBAN" invisible="is_foreign==True" required = "payment_method=='bank'" />
--->
-                    <field name="payment_method" groups="hr_payroll.group_hr_payroll_user" string="Metodo de pagamento"
-                           widget="radio"
-                           required="1"/>
+                    <field name="bank_iban" string="IBAN" invisible="is_foreign" required="payment_method=='bank'"/>
+                    <field name="payment_method" groups="hr_payroll.group_hr_payroll_user" string="Metodo de pagamento" widget="radio" required="1"/>
                 </group>
                 <group>
                     <field name="has_criminal_record" widget="boolean_toggle"/>
@@ -107,26 +119,18 @@
                     <field name="end_date" invisible="1"/>
                 </group>
             </xpath>
-            <xpath expr="//page[@name='hr_settings']/group/group" position="replace">
-                <group string="Status" name="active_group">
-                    <field name="user_id" string="Related User" domain="[('share', '=', False)]"/>
-                    <field name="cp_employee_type" invisible="1"/>
 
-                </group>
-
-            </xpath>
-            
+            <!-- Páginas extra -->
             <xpath expr="//page[@name='hr_settings']" position="before">
-                    <page name="description" string="Descrições das Funções">
-                        <h3 style="text-align:left">Descrições das Funções</h3>
-                        <field name="functions_descriptions" nolabel="1"/>
+                <page name="description" string="Descrições das Funções">
+                    <h3 style="text-align:left">Descrições das Funções</h3>
+                    <field name="functions_descriptions" nolabel="1"/>
+                </page>
+                <page string="Assinaturas digitais" name="signature">
+                    <field name="sign_signature" widget="signature" options="{'full_name': 'display_name', 'size': ['',100]}"/>
+                </page>
+            </xpath>
 
-                    </page>
-                    <page string="Assinaturas digitais" name="signature">
-                        <field name="sign_signature" widget="signature"
-                               options="{'full_name': 'display_name', 'size': ['',100]}"/>
-                    </page>
-                </xpath>
         </field>
     </record>
 </odoo>
